Started document notebooks

--- a/Notebooks/Exploratory Data Analysis.ipynb
+++ b/Notebooks/Exploratory Data Analysis.ipynb
@@ -505,6 +505,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's read in our pre-trained document embeddings and visualize them:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -513,6 +520,13 @@
     "import gensim\n",
     "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
     "from nltk.tokenize import word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since reading subs aren't included in our document embeddings, let's go ahead and pop that out of our cats list:"
    ]
   },
   {
@@ -624,6 +638,13 @@
    "metadata": {},
    "source": [
     "## Word Clouds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way to visualize text data is with word clouds:"
    ]
   },
   {
@@ -948,6 +969,13 @@
    "metadata": {},
    "source": [
     "## Exploring Posts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, let's explore the text data grouped by post rather than subreddit:"
    ]
   },
   {
