--- a/Notebooks/Subreddit Clustering.ipynb
+++ b/Notebooks/Subreddit Clustering.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook explores clustering on subreddit text data as scraped and processed earlier.  Clustering is performed on the datasets generated both by producing document embeddings using [gensim](https://radimrehurek.com/gensim/) and sparse matrices as returned by sklearn's [tf-idf](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html) vectorizer.  The general outline is as follows:  \n",
+    "\n",
+    "(1) Read in text data  \n",
+    "(2) Produce clustering using K-Means  \n",
+    "(3) Find ideal k for K-Means  \n",
+    "(4) Utilize additional clustering algorithms: agglomerative clustering, DBSCAN, OPTICS, Affinity Propagation, and Spectral Clustering  \n",
+    "(5) Application: producing recommendations  \n",
+    "(6) Exploration of models using tf-idf vectorization\n",
+    "\n",
+    "The documentation for the clustering algorithms can be found [here](https://scikit-learn.org/stable/modules/clustering.html)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -37,6 +53,13 @@
    "metadata": {},
    "source": [
     "## Clustering Subreddits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by reading in subreddit data.  Reading subs are excluded since they have insufficient data."
    ]
   },
   {
@@ -93,6 +116,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we import our pre-trained document embeddings:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -129,6 +159,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll start by training a K-Means model on our data.  Start by searching for optimal parameters.  Our metrics our sillhouette score, homogeneity, completeness, and v-score:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -146,6 +183,13 @@
     "    homo.append(metrics.homogeneity_score(labels, km.labels_))\n",
     "    com.append(metrics.completeness_score(labels, km.labels_))\n",
     "    v.append(metrics.v_measure_score(labels, km.labels_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's graph our measures and corresponding k values:"
    ]
   },
   {
@@ -183,6 +227,13 @@
     "plt.plot(list_k, com, marker='o', label='completeness')\n",
     "plt.plot(list_k, v, marker='o', label='v-score')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make an initial model using k equal to the number of categories provided:"
    ]
   },
   {
@@ -232,6 +283,13 @@
     "print(\"Completeness: %0.3f\" % metrics.completeness_score(labels, km.labels_))\n",
     "print(\"V-measure: %0.3f\" % metrics.v_measure_score(labels, km.labels_))\n",
     "print(f'Inertia: {km.inertia_}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These measures are decent, but the plotted metrics show that we can do better.  Let's choose k=12:"
    ]
   },
   {
@@ -287,7 +345,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a decent clustering!  High homogeneity suggests that clusters contain subreddits that share a topic (e.g. sports subreddits tend to be in clusters together).  Low completeness suggests that, for example, not every sports subreddit is in the same cluster.  This is actually ok; think about sports subreddits: there are soccer, football, basketball, collegiate, and professional sports subreddits all grouped into the same loose category.  It makes sense that an ideal clustering might not group all of these subs together.  The sillhouette score almost can't be helped: our text data is not comprehensive enough to bring out the differences between each subreddit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Agglomerative Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can try other clustering methods.  Agglomerative clustering might be a good candidate:"
    ]
   },
   {
@@ -297,6 +369,13 @@
    "outputs": [],
    "source": [
     "from sklearn.cluster import AgglomerativeClustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll do the same search for parameters as we did for K-Means:"
    ]
   },
   {
@@ -357,6 +436,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's set n_clusters to 11 and see what kind of clustering is produced:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -406,7 +492,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a bit better than our K-Means clustering!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## DBSCAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try out even more clusterings.  For DBSCAN, we'll need to determine a value for epsilon:"
    ]
   },
   {
@@ -458,6 +558,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting eps to 0.6 makes a single cluster, but setting it higher can produce more.  Let's use eps=1.0:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -499,6 +606,13 @@
     "print(\"Homogeneity: %0.3f\" % metrics.homogeneity_score(labels, dbscan.labels_))\n",
     "print(\"Completeness: %0.3f\" % metrics.completeness_score(labels, dbscan.labels_))\n",
     "print(\"V-measure: %0.3f\" % metrics.v_measure_score(labels, dbscan.labels_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This clustering produces only two clusters, which is a poor fit for our data and isn't of much use for making subreddit recommendations.  Let's move on to OPTICS, another density based algorithm:"
    ]
   },
   {
@@ -552,6 +666,13 @@
     "print(\"Homogeneity: %0.3f\" % metrics.homogeneity_score(labels, op.labels_))\n",
     "print(\"Completeness: %0.3f\" % metrics.completeness_score(labels, op.labels_))\n",
     "print(\"V-measure: %0.3f\" % metrics.v_measure_score(labels, op.labels_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is much better than a DBSCAN fit, but still not as good as either Agglomerative or K-Means.  Let's try some other algorithms, like Affinity Propagation and Spectral Clustering:"
    ]
   },
   {
@@ -721,7 +842,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Both Affinity Propagation and Spectral Clustering produce great clusterings!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll now consider a brief application of clustering.  We'll grab a random subreddit and first look at which subs are \"closest\" to it according to our gensim model.  Then, we'll make a cluster prediction and see which subs are clustered with the original by model.  These other subs in the cluster will be our recommendations:"
    ]
   },
   {
@@ -763,7 +898,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at what are the \"closest\" subreddits to r/soccer, solely according to distance between embeddings:"
+    "Let's look at what are the \"closest\" subreddits to r/pcgaming, solely according to distance between embeddings:"
    ]
   },
   {
@@ -797,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some of these are a bit whack.  Let's look at which subreddits are in each model's clustering for r/pcgaming:"
+    "Most of these make sense: r/xboxone and r/games are both gaming subs, and r/gadgets and r/linux are tech subs (which are closely related to gaming).  Let's look at which subreddits are in each model's clustering for r/pcgaming:"
    ]
   },
   {
@@ -826,6 +961,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The K-Means model grabs tech subreddits, which is not necessarily the best.  \n",
+    "\n",
     "For agglomerative clustering:"
    ]
   },
@@ -857,6 +994,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The agglomerative model grabs both gaming and tech subs.  This is better!\n",
+    "\n",
     "For affinity propagation:"
    ]
   },
@@ -891,6 +1030,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a much bigger cluster that includes both gaming and tech subreddits.  This is good, if perhaps a bit large.\n",
+    "\n",
     "For spectral clustering:"
    ]
   },
@@ -914,6 +1055,13 @@
     "for index in same_cluster_index:\n",
     "    if index != doc_id:\n",
     "        print(documents[index][3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, only tech subs are grabbed.  This makes sense since r/pcgaming deals with computer hardware and entertainment."
    ]
   },
   {
@@ -1091,7 +1239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now let's get into recommendation:"
+    "It looks like our tf-idf K-Means model is actually a bit clearer than our document embedding K-Means model.  The problem with using tf-idf vectorization is that it is simply not scalable.  Dimensionality reduction is another parameter to be trained, and training on a sparse matrix with tens of thousands of columns would be a serious undertaking.  Nonetheless, we can use this model to make recommendations:"
    ]
   },
   {
