--- a/Notebooks/Train Embeddings.ipynb
+++ b/Notebooks/Train Embeddings.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook demonstrates how to train document embeddings on our Reddit text dataset.  I follow the general outline presented in this [article](https://radimrehurek.com/gensim/auto_examples/tutorials/run_doc2vec_lee.html#sphx-glr-auto-examples-tutorials-run-doc2vec-lee-py) from gensim.  The general outline is as follows:\n",
+    "\n",
+    "(1) Read in subreddit data  \n",
+    "(2) Create model objects \n",
+    "(3) Search for optimal dimensions over range 2-100  \n",
+    "(4) Search for optimal dimensions over range 2-10  \n",
+    "(5) Save models  \n",
+    "\n",
+    "This will be done for both the subreddit and post data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,11 +24,8 @@
     "import os\n",
     "import glob\n",
     "import json\n",
-    "import random\n",
     "import gensim\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -41,13 +53,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Start by reading in the subreddits we will train the document embeddings on.  Notice that I don't include reading, since there are very few comments for the reading subreddits."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cats = ['art', 'gaming', 'music', 'politics_news', 'science', 'sports', 'tech']\n",
-    "stem = 'lemma'"
+    "cats = ['art', 'gaming', 'music', 'politics_news', 'science', 'sports', 'tech'] # categories\n",
+    "stem = 'lemma' # stemming type to use"
    ]
   },
   {
@@ -60,11 +79,11 @@
     "\n",
     "for cat in cats:\n",
     "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
-    "    files = glob.glob('*.json')\n",
-    "    for file in files:\n",
+    "    files = glob.glob('*.json') # grab all .json files and store their names in a files list\n",
+    "    for file in files: # read each .json file and extract its comments\n",
     "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
-    "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
+    "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0])) # extra cat for label encoding\n",
     "        \n",
     "documents = np.array(documents)"
    ]
@@ -75,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder = LabelEncoder()\n",
+    "encoder = LabelEncoder() # encode categories using LabelEncoder\n",
     "documents[:, 2] = encoder.fit_transform(documents[:, 2])"
    ]
   },
@@ -84,6 +103,13 @@
    "metadata": {},
    "source": [
     "**Create model objects**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Doc2Vec model requires a corpus (a list of tokenized, labeled documents) to build a vocabulary to train embeddings.  We'll tokenize each document in our list using NLTK's [word_tokenize](https://www.nltk.org/api/nltk.tokenize.html) function."
    ]
   },
   {
@@ -104,9 +130,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My knowledge of ideal embedding dimensions is very limited.  As such, I'll treat the dimension as a hyperparameter to train with our model.  My assumption is that the dimension that balances silhouette score and model accuracy (as measured by homogeneity, completeness, and v-measure) the best is the ideal dimension to train embeddings on; measures are tested on a k-means model with n_clusters set to the number of categories.  Again, this is probably an inaccurate way to go about it, but I feel it's a reasonable enough start.  \n",
+    "\n",
+    "We'll start by looking at embedding dimensions from 2 to 100 (with a step of 5):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -263,7 +300,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It looks like the dimensions ranging from 2-10 give the best balance between sillhouette score and accuracy.  Notice how sillhouete score goes down dramatically as the number of dimensions increases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Refine: search dimensions 2-10**:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'll search in the range 2-10 to get a better look:"
    ]
   },
   {
@@ -370,7 +421,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dimension 4 seems to give the best balance between high accuracy and good clustering (as measured by sillhouette score)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Select model and save**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's train a model using dimension 4 and save it."
    ]
   },
   {
@@ -407,6 +472,13 @@
    "metadata": {},
    "source": [
     "## Training on Posts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll repeat the same process as above, but we'll assume that dimension 4 is ideal."
    ]
   },
   {
