Generalized all filepaths

--- a/Notebooks/Code Demonstration.ipynb
+++ b/Notebooks/Code Demonstration.ipynb
@@ -75,10 +75,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
     "        \n",
@@ -195,10 +195,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
     "        \n",
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data')\n",
+    "os.chdir(r'..\\Data')\n",
     "\n",
     "model = Doc2Vec.load('subs.model')\n",
     "\n",
