--- a/Notebooks/Post Clustering.ipynb
+++ b/Notebooks/Post Clustering.ipynb
@@ -73,10 +73,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        df = pd.DataFrame(comments)\n",
     "        posts = df['post_id'].unique()\n",
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data')\n",
+    "os.chdir(r'..\\Data')\n",
     "\n",
     "model = Doc2Vec.load('posts.model')\n",
     "\n",
@@ -2013,10 +2013,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        df = pd.DataFrame(comments)\n",
     "        posts = df['post_id'].unique()\n",
