--- a/Notebooks/Train Embeddings.ipynb
+++ b/Notebooks/Train Embeddings.ipynb
@@ -78,10 +78,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json') # grab all .json files and store their names in a files list\n",
     "    for file in files: # read each .json file and extract its comments\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0])) # extra cat for label encoding\n",
     "        \n",
@@ -455,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data')"
+    "os.chdir(r'..\\Data')"
    ]
   },
   {
@@ -497,10 +497,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        df = pd.DataFrame(comments)\n",
     "        posts = df['post_id'].unique()\n",
@@ -554,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data')"
+    "os.chdir(r'..\\Data')"
    ]
   },
   {
