--- a/Notebooks/Exploratory Data Analysis.ipynb
+++ b/Notebooks/Exploratory Data Analysis.ipynb
@@ -97,10 +97,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
     "        \n",
@@ -638,10 +638,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
     "        \n",
@@ -671,7 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data')\n",
+    "os.chdir(r'..\\Data')\n",
     "\n",
     "model = Doc2Vec.load('subs.model')\n",
     "\n",
@@ -1110,10 +1110,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        df = pd.DataFrame(comments)\n",
     "        posts = df['post_id'].unique()\n",
@@ -1233,10 +1233,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        df = pd.DataFrame(comments)\n",
     "        posts = df['post_id'].unique()\n",
@@ -1262,7 +1262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'C:\\Users\\jonat\\Desktop\\Data Mining\\Project\\Data')\n",
+    "os.chdir(r'..\\Data')\n",
     "\n",
     "model = Doc2Vec.load('posts.model')\n",
     "\n",
