Fixed filepaths and report finished

--- a/Notebooks/Code Demonstration.ipynb
+++ b/Notebooks/Code Demonstration.ipynb
@@ -72,13 +72,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "base = os.getcwd()\n",
+    "base = base.replace('\\\\', r'/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'{base}/../Data/{cat}/Processed/{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'{base}/../Data/{cat}/Processed/{stem}/{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
     "        \n",
@@ -195,10 +205,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'{base}/../Data/{cat}/Processed/{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'{base}/../Data/{cat}/Processed/{stem}/{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
     "        \n",
@@ -213,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'..\\Data')\n",
+    "os.chdir(fr'{base}/../Data')\n",
     "\n",
     "model = Doc2Vec.load('subs.model')\n",
     "\n",
@@ -299,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +329,7 @@
        "                    damping=0.5, max_iter=200, preference=None, verbose=False)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -396,15 +406,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample subreddit: worldnews\n",
-      "Sample category: politics_news\n"
+      "Sample subreddit: drawing\n",
+      "Sample category: art\n"
      ]
     }
    ],
@@ -428,16 +438,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gaming\n",
-      "news\n",
-      "technology\n"
+      "painting\n",
+      "pixelart\n"
      ]
     }
    ],
@@ -458,16 +467,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "news\n",
-      "PoliticalHumor\n",
-      "politics\n"
+      "art\n",
+      "painting\n",
+      "pixelart\n",
+      "biology\n",
+      "chemistry\n"
      ]
     }
    ],
