--- a/Notebooks/Train Embeddings.ipynb
+++ b/Notebooks/Train Embeddings.ipynb
@@ -71,6 +71,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base = os.getcwd()\n",
+    "base = base.replace('\\\\', r'/')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -78,12 +88,12 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
-    "    files = glob.glob('*.json') # grab all .json files and store their names in a files list\n",
-    "    for file in files: # read each .json file and extract its comments\n",
-    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "    os.chdir(fr'{base}/../Data/{cat}/Processed/{stem}')\n",
+    "    files = glob.glob('*.json')\n",
+    "    for file in files:\n",
+    "        with open(fr'{base}/../Data/{cat}/Processed/{stem}/{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
-    "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0])) # extra cat for label encoding\n",
+    "        documents.append((' '.join([comment['comment'] for comment in comments]), cat, cat, file.split('.json')[0]))\n",
     "        \n",
     "documents = np.array(documents)"
    ]
@@ -455,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'..\\Data')"
+    "os.chdir(fr'{base}/../Data')"
    ]
   },
   {
@@ -497,10 +507,10 @@
     "documents = []\n",
     "\n",
     "for cat in cats:\n",
-    "    os.chdir(fr'..\\Data\\{cat}\\Processed\\{stem}')\n",
+    "    os.chdir(fr'{base}/../Data/{cat}/Processed/{stem}')\n",
     "    files = glob.glob('*.json')\n",
     "    for file in files:\n",
-    "        with open(fr'..\\Data\\{cat}\\Processed\\{stem}\\{file}', 'r') as f:\n",
+    "        with open(fr'{base}/../Data/{cat}/Processed/{stem}/{file}', 'r') as f:\n",
     "            comments = json.load(f)\n",
     "        df = pd.DataFrame(comments)\n",
     "        posts = df['post_id'].unique()\n",
@@ -554,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(r'..\\Data')"
+    "os.chdir(fr'{base}/../Data')"
    ]
   },
   {
